backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: pnt-quiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
        tier: backend
    spec:
      containers:
      - name: echo-container
        image: ealen/echo-server
        imagePullPolicy: Always
