backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-app
spec:
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
