frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-app
spec:
  selector:
    app: frontend-app
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
